updated slider images

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -12,7 +12,7 @@
   --bg-color-transparent: #00163f80;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #D50000;
+  --accent-color: #FF5252;
   --header-shadow: var(--accent-color) 213px 0px 0px;
   --card-shadow: var(--accent-color) 213px 0px 0px;
 }
